<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_headset"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pray"
            android:icon="@drawable/ic_menu_pray"
            android:title="@string/menu_pray" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_baseline_books"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_grow"
            android:icon="@drawable/ic_menu_grow"
            android:title="@string/menu_grow" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/menu_setting" />
    </group>

</menu>