<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bible.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pray"
        android:name="com.example.bible.ui.pray.PrayFragment"
        android:label="@string/menu_pray"
        tools:layout="@layout/fragment_pray" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.bible.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_grow"
        android:name="com.example.bible.ui.grow.GrowFragment"
        android:label="@string/menu_grow"
        tools:layout="@layout/fragment_grow" />

    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.bible.ui.book.BookFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_book" />


</navigation>