<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/album"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/label"
        android:background="@color/black" />

    <TextView
        android:id="@+id/album1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/album1"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/album1"
        android:background="@color/black" />

    <TextView
        android:id="@+id/album2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/album1"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/album2"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/album2"
        android:background="@color/black" />

    <TextView
        android:id="@+id/album3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/album2"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/album3"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/album3"
        android:background="@color/black" />

    <TextView
        android:id="@+id/album4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/album3"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/album4"
        android:textSize="20sp" />

</RelativeLayout>