<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:filterTouchesWhenObscured="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/listenMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/mainMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/podcast"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/podcast_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/podcast"
                            android:textAlignment="center"
                            android:textAppearance="@style/customfontstyle"
                            android:textSize="24sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/musicPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@id/podcast"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/music_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/musicPlayer"
                            android:textAlignment="center"
                            android:textAppearance="@style/customfontstyle"
                            android:textSize="24sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sermons"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_below="@id/podcast"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sermons_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sermons"
                            android:textAlignment="center"
                            android:textAppearance="@style/customfontstyle"
                            android:textSize="24sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/bibleAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_below="@id/musicPlayer"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@id/sermons"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bibleaudio_bg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bibleAudio"
                            android:textAlignment="center"
                            android:textAppearance="@style/customfontstyle"
                            android:textSize="24sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>


            <ImageView
                android:id="@+id/logo"
                android:layout_width="260dp"
                android:layout_height="107dp"
                android:layout_below="@id/mainMenu"
                android:layout_centerHorizontal="true"
                android:background="@drawable/app_icon2" />

        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>